{
    "name": "InputActions",
    "maps": [
        {
            "name": "General Controls",
            "id": "775ec2b0-db0d-4234-a6cd-4343c9be6f27",
            "actions": [
                {
                    "name": "Open Settings",
                    "type": "Button",
                    "id": "0f7bb646-95bd-493b-ad3e-9907993e519f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e321777-61fc-4458-a6db-1bf6cb0b93d1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Open Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Battlefield Controls",
            "id": "42d51438-61fc-49d7-82a3-6d561588209b",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "3025704b-2361-42f4-bdf9-95598efae154",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "0a705f67-c755-4181-b2fc-33aa09e3c1f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "215c0ce5-291f-4546-8a65-ca9df75bfadc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c25eefc-70af-4686-a7e8-0c1ce2d5ea71",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ab1cf67-a6a8-4830-9a4a-2e9c527aaa4e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85b41d44-e389-4d92-9685-884cb2d1f017",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Map Controls",
            "id": "dee299c7-ffa9-447b-9b5f-bb42f0dc82fa",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "c9197ecd-ac70-4125-b376-d471b7d06eec",
                    "expectedControlType": "Axis",
                    "processors": "Normalize(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard WS",
                    "id": "a751df54-42c1-44c1-a1c3-d1db6b497d5b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d8c1b6ce-7384-4f6b-8dad-b7dcc22d7779",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "33eb456a-dbe8-4143-97e5-8195c3900604",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard Arrows",
                    "id": "9e87604e-311e-438d-bfe4-3e9a3de3f2b5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "213c121e-8ec1-4a4f-ab6f-bbb0bab79644",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7e3c2ac9-6075-4fdc-88fa-7825ce959bcf",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse Scrolling",
                    "id": "278e5bcf-773e-4dec-acae-beef35b4cb85",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Scale(factor=0.1)",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "241197a2-8d91-46bf-8df6-aec4f0bf5a5e",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7d42838b-93ca-4273-8c3c-7d5f0cbc2414",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and Keyboard",
            "bindingGroup": "Mouse and Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}